--- a/main.ipynb
+++ b/main.ipynb
@@ -10,20 +10,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "id": "53e45494",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import psycopg2\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "id": "391c3eaf",
    "metadata": {},
    "outputs": [
@@ -33,7 +49,7 @@
        "(10051, 11)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "id": "cc35aec7",
    "metadata": {},
    "outputs": [
@@ -175,7 +191,7 @@
        "4       7.0  08/02/19  10:37:00        Ewallet     5.3           0.48  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "id": "e9d34b99",
    "metadata": {},
    "outputs": [
@@ -290,7 +306,7 @@
        "max    10000.000000     10.000000     10.000000       0.570000"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 91,
    "id": "b3c5c9e9",
    "metadata": {},
    "outputs": [
@@ -344,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "id": "bf162f5a",
    "metadata": {},
    "outputs": [
@@ -354,7 +370,7 @@
        "np.int64(51)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "id": "9e32f93b",
    "metadata": {},
    "outputs": [
@@ -387,7 +403,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "id": "d5b212f1",
    "metadata": {},
    "outputs": [
@@ -409,7 +425,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "id": "86c95eea",
    "metadata": {},
    "outputs": [
@@ -443,7 +459,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 96,
    "id": "43a494ed",
    "metadata": {},
    "outputs": [],
@@ -469,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 97,
    "id": "a3483563",
    "metadata": {},
    "outputs": [
@@ -504,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "id": "2638e96b",
    "metadata": {},
    "outputs": [
@@ -646,7 +662,7 @@
        "4       604.17  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "id": "6870dc88",
    "metadata": {},
    "outputs": [],
@@ -668,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "id": "29c975cc",
    "metadata": {},
    "outputs": [
@@ -681,8 +697,17 @@
     }
    ],
    "source": [
-    "# Connect to PostgreSQL server\n",
-    "engine_psql = create_engine(\"postgresql+psycopg2://postgres:Datawork10!@localhost:5432/walmart_db\")\n",
+    "import os\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Connect to PostgreSQL server using environment variables\n",
+    "db_user = os.getenv('DB_USER')\n",
+    "db_password = os.getenv('DB_PASSWORD')\n",
+    "db_host = os.getenv('DB_HOST')\n",
+    "db_port = os.getenv('DB_PORT')\n",
+    "db_name = os.getenv('DB_NAME')\n",
+    "\n",
+    "engine_psql = create_engine(f\"postgresql+psycopg2://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}\")\n",
     "\n",
     "try:\n",
     "    with engine_psql.connect() as conn:\n",
@@ -693,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 105,
    "id": "7952940b",
    "metadata": {},
    "outputs": [
@@ -701,7 +726,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded 9969 records into PostgreSQL table: walmart_sales\n"
+      "Error loading data to PostgreSQL: (psycopg2.errors.DependentObjectsStillExist) cannot drop table walmart_sales because other objects depend on it\n",
+      "DETAIL:  view branch_sales_profit depends on table walmart_sales\n",
+      "view sales_trend depends on table walmart_sales\n",
+      "view category_sales depends on table walmart_sales\n",
+      "view payment_distribution depends on table walmart_sales\n",
+      "HINT:  Use DROP ... CASCADE to drop the dependent objects too.\n",
+      "\n",
+      "[SQL: \n",
+      "DROP TABLE walmart_sales]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n"
      ]
     }
    ],
